--- a/lib/package.json
+++ b/lib/package.json
@@ -16,10 +16,7 @@
     "react-component",
     "material design"
   ],
-  "publishConfig": {
-    "registry": "https://registry.npmjs.org/",
-    "access": "public"
-  },
+  "private": "true",
   "sideEffects": false,
   "license": "MIT",
   "bugs": {
