Changed main to compiled index

--- a/lib/package.json
+++ b/lib/package.json
@@ -2,8 +2,8 @@
   "name": "@leadsimple/material-ui-pickers",
   "version": "3.3.12",
   "description": "React components, that implements material design pickers for material-ui v4",
-  "main": "./lib/build/index.js",
-  "module": "./lib/build/index.js",
+  "main": "./build/index.js",
+  "module": "./build/index.js",
   "keywords": [
     "material-ui",
     "pickers",
